# amber

./: .gitignore  .projections.json  .rubocop.yml  .travis.yml  Gemfile  README.md  Rakefile  amber.gemspec  error.txt  options-parser-example.rb  private-rubygem-server.rb
data/: newcase.yaml  newplan.yaml  newsuite.yaml
doc/: sprint.md
en/: README.md
lib/: amber.rb
lib/amber/: a0-test.rb  a1-report-writer.rb  anode.rb  ascii-environment.rb  ascii-test-case.rb  ascii-test-plan.rb  ascii-test-step.rb  ascii-test-suite.rb  ascii-test.rb  ascii_environment.rb  ascii_test.rb  ascii_test_case.rb  ascii_test_plan.rb  ascii_test_step.rb  (+43 more)
report/: EscapeLaTeXChar.tex  EscapeLaTeXChar.texx  amber.tex  amber.texx  change-summary.tex  example.tex  intended-use-list.tex  intended-use.tex  overview.tex  prerequisites.tex  product-description.tex  signatures.tex
spec/: options_browser_spec.rb  options_case_spec.rb  options_default_spec.rb  options_environment_spec.rb  options_file_spec.rb  options_language_spec.rb  options_nodryrun_spec.rb  options_obliterate_spec.rb  options_plan_spec.rb  options_simulate_spec.rb  options_suite_spec.rb  options_verbose_spec.rb  options_version_spec.rb  options_writer_spec.rb  spec_helper.rb
test/: amber_test.rb  amend_test.rb  test_helper.rb
test-output/: environment.tex  test-results.tex
test-runner/: test-runner.cabal
test-runner/src/TestRunner/: Directory.hs  Environment.hs  Latex.hs  OutputFiles.hs  PrepareReportData.hs  PrettyPrint.hs  Program.hs  Protocol.hs  RecipeResult.hs  RecipeStep.hs  RecipeTable.hs  Step.hs  Tester.hs
(+191 files in other folders)
